# CK-EP

./: .env.example  .gitignore  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  init.sh
backend/: .pre-commit-config.yaml  Dockerfile  Dockerfile.test  alembic.ini  app_test.py  basic_verify.py  pyproject.toml  requirements.test.txt  requirements.txt  verify_functionality.py
backend/alembic/: env.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  kubespray_proxy.py
backend/src/api/v1/: __init__.py  environment.py  exam_sessions.py  kubespray_proxy.py  question_scoring.py  question_sets.py  router.py  vm_configs.py  vnc_access.py
backend/src/database/: __init__.py  connection.py
backend/src/middleware/: __init__.py  error.py  logging.py  session_guard.py  validation.py
backend/src/models/: __init__.py  exam_result.py  exam_session.py  question_data.py  question_result.py  question_result_v2.py  question_set_data.py  verification_result.py  vm_cluster_config.py  vm_node.py
backend/src/services/: __init__.py  bastion_container_service.py  container_service.py  environment_service.py  exam_result_file_service.py  exam_session_service.py  kubespray_config_service.py  question_set_file_manager.py  question_set_service.py  scoring_service.py  ssh_key_service.py  vm_cluster_service.py  vm_config_file_service.py  vnc_container_service.py  vnc_service.py
backend/tests/: conftest.py
backend/tests/contract/: __init__.py  test_environment.py  test_exam_sessions.py  test_question_scoring.py  test_question_sets.py  test_vm_configs.py  test_vnc_access.py
backend/tests/integration/: __init__.py  test_exam_flow.py  test_kubespray_deployment.py  test_question_file_loading.py  test_vm_connection.py  test_vnc_container.py
backend/tests/performance/: test_api_performance.py
backend/tests/unit/: test_exam_session_service.py  test_question_set_file_manager.py  test_scoring_service.py  test_vm_cluster_service.py
containers/bastion/: Dockerfile  bashrc  entrypoint.sh  sshd_config  vimrc
containers/kubespray/: Dockerfile
containers/vnc/: Dockerfile  bashrc  desktop_setup.sh  ssh_config  startup.sh  vimrc  vnc_entrypoint.sh
data/ssh_keys/: README.md
data/vm_configs/: example-cluster.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/scripts/: analyze-bundle.js
frontend/src/: App.tsx  index.css  main.tsx
kubespray/: Dockerfile  README.md  app.py  requirements.txt
kubespray/src/: __init__.py  main.py
nginx/: empty.conf  nginx.conf  nginx.dev.conf  nginx.test.conf
redis/: redis.conf
scripts/: analyze-docker-images.sh  backup.sh  init_database.py  memory-optimization.py  restore.sh  run-e2e-tests.sh  setup-backup-schedule.sh  setup-monitoring.sh  setup_environment.sh  validate-manual-testing.py
specs/001-k8s-home-ubuntu/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/e2e/: conftest.py  pytest.ini  requirements.txt  test_complete_exam_flow.py  (+2 more)
(+79 files in other folders)
